<resources>
    <!-- Default is English -->
    <string name="plus">+</string>

    <string name="app_name">Birthday Service</string>
    <string name="settings">Settings</string>
    <string name="go_to_switch">Start/stop SMS service ></string>

    <string name="our_default_message">Happy Birthday!</string>

    <string name="text_search_field">Search..</string>

    <string name="friends">Friends</string>
    <string name="edit_message">Edit message</string>
    <string name="birthdays">Upcoming birthdays</string>

    <string name="edit_message_all_contacts">Change the message for all chosen friends:</string>

    <string name="edit_friend">Edit friend</string>

    <string name="new_friend">Add a new friend</string>
    <string name="set_time">Set time for sending messages ></string>

    <string name="label_name">Name:</string>
    <string name="label_birthday">Birthday:</string>
    <string name="label_phone_number">Phone number:</string>
    <string name="label_message">Message:</string>
    <string name="add">Add</string>

    <string name="person_added_message">was added!</string>

    <!-- ................ XML Strings on Edit/New Message activity............-->
    <string name="choose_receiver">Choose friends</string>
    <string name="save">Save</string>
    <string name="choose_receiver_head">Choose Friend</string>
    <string name="ok">Ok</string>
    <string name="chosen_contacts_label">Chosen friends:</string>
    <string name="message_changed">Message has been changed for these friends!</string>
    <string name="no_contacts_chosen_error_message">You haven\'t chosen any friends!</string>

    <!-- Validation messages Add new friend -->
    <string name="name_error_message">Name must be filled in!</string>
    <string name="phone_error_message">Phone number must be at least 8 digits!</string>
    <string name="message_error_message">The message cannot be empty!</string>

    <!-- Edit contact -->
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="parse_id_error_message">An error occurred! Your friend was not deleted!</string>
    <string name="parse_id_date_picker_error_message">An error occurred! Unable to get your friend\'s birthday!</string>
    <string name="person_deleted_message">was deleted!</string>
    <string name="person_edited_message">\'s info has been changed!</string>
    <string name="parse_id_edited_error_message">An error occurred! Your friend\'s info was not changed!</string>
    <string name="yes">Yes</string>
    <string name="delete_warning_message">Do you really want to delete this friend?</string>

    <!-- Settings -->
    <string name="change_time_title">Time for sending SMS</string>
    <string name="change_default_message_title">Default SMS message</string>
    <string name="turn_app_on_off_title">Sending SMS</string>
    <string name="change_language_title">Language</string>
    <string name="time_picker_dialog_summary">Set time</string>
    <string name="set">Set</string>

    <!-- Result of notification -->
    <string name="notification_title">Birthday Service</string>
    <string name="notification_message">Birthday message sent!</string>
    <string name="result_class_title">SMS sent</string>
    <string name="result_intro">The following friend(s) have gotten a birthday message from you:</string>
    <string name="find_person_error">An error occurred getting your friends information.</string>

</resources>